# secure_chatroom_microserviced

./: .gitIgnore  docker-compose.yml
auth_service/: .gitIgnore  Dockerfile  pyproject.toml
auth_service/app/: database.py  main.py  models.py
auth_service/app/routes/: auth.py
auth_service/app/utils/: jwt_utils.py
chat_service/: .env  pyproject.toml
chat_service/app/: database.py  dependencies.py  main.py  models.py
chat_service/app/routes/: message.py
notification_service/: .env  .gitIgnore  pyproject.toml
notification_service/app/: database.py  email_utils.py  main.py  models.py
notification_service/app/routes/: notify.py
user_service/: Dockerfile  pyproject.toml
user_service/app/: database.py  dependencies.py  main.py  models.py
user_service/app/routes/: profile.py  user.py
user_service/app/utils/: jwt_utils.py
